Adding the recipes and the image

--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -9,6 +9,30 @@
   </head>
   <body>
 	 <h1> Spaghetti </h1>
+	 <img src="spaghetti.jpg">
+	 <h3> Description </h3> 
+	 <p> Les spaghetti ou spaghettis sont un plat de pâtes longues, fines et cylindriques, typique de la cuisine italienne. </p>
+	 <h3> Ingredients </h3>
+	 
+	 	<ul>
+	 		<li>500 g de spaghetti.</li>
+			<li>100 g de concentré de tomate.</li>
+			<li>2 c. à soupe d'huile d'olive.</li>
+			<li>4 petits oignons.</li>
+			<li>1 gousse d'ail.</li>
+			<li>70 g de parmesan.</li>
+			<li>1 pincée de persil.</li>
+			<li>1 pincée de piment doux.</li>
+		</ul>
+		<ol>
+			<li> Use a large pot </li>
+			<li>Load up the pot with lots of water</li>
+			<li>Salt the water</li>
+			<li>Bring the water to a full, rolling boil</li>
+			<li>Stir to keep the pasta from sticking</li>
+			<li>Save a scoop of pasta water</li>
+			<li>Drain, toss with sauce, and serve hot</li>
+		</ol>
 
   </body>
 </html>
