--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   </head>
   <body>
 	 <h1> Odin Recipes </h1>
-   <a href="recipes/spaghetti.html"> Spaghetti </a>
+   <a href="recipes/spaghetti.html"> Spaghetti </a> <br>
+   <a href="recipes/lasagne.html"> Lasagne </a> <br>
+   <a href="recipes/couscous.html"> Couscous </a>
 
   </body>
 </html>
